Migrate catalog to relational SQLite and add on-device ML Kit translation